 - pdp3.sh: added support for file paths with spaces
 - pdp3.sh: added support for older versions of wget
 - table: added M14.ATX

14. 2022-06-20 (v2.2)
 - pdp3.sh: added alerts for improper installation operations
 - pdp3.sh: added OFFLINE mode to save time from wget calls
 - pdp3.sh: added SA mode for SPP processing
 - pdp3.sh: bug fixes for ANTEX file damage in batch processing
 - pdp3.sh: bug fixes for unexpected break off in multi-day processing
 - pdp3.sh: increased maximum number of days for multi-day processing to 32

15. 2022-10-28 (v2.2)
 - pdp3.sh: increased maximum processing interval to 300.0 secs
 - pdp3.sh: fixed syntax errors in output
 - spp: aligned initial coordinates file timestamp with observations
 - lsq: fixed potential fatal issues caused by rounding errors

16. 2022-11-21 (v2.2)
 - New default products for dates between 1995 and 2020: IGS Repro3 combination products (IGS2R03FIN) that supprot PPP-AR after 2020
 - pdp3.sh: increased decimal places in time range from two to three
 - table: added igsR3_2135.atx, removed M14.ATX

17. 2023-02-14 (v2.2)
 - Added IGS20 compatilibility with new ANTEX file, SINEX file, and "APC_MODEL" keyword
 - pdp3.sh: decreased the minimum processing time range for loose editing to 30.0 secs
 - pdp3.sh: priori station coordinates can now be specified in the sit.xyz manually
 - lib: adopted complete phase center correction on the Melbourn-Wubbena combination
 - lib: fixed the issue of unable to read BDS B1I observations from RINEX 3.02 format
 - lib: fixed the issue of unable to read zero biases from bias product
 - lsq: untrusted coordinates (that previously marked with “*”) are no longer exproted to the kin file
 - table: added igs20_2247.atx

 18. 2023-02-27 (v2.2)
 - pdp3.sh: consider specifying the language/region setting to "en_US.UTF-8" to avoid issues with decimal comma
 - table: BDS GEO satellites are disabled by default to enhance processing quality