@@ -10,4 +10,5 @@ type antatx
   real*8 neu(3,10,5)
   real*8 pcv(50,0:200,10,5)
   character*5 sys_multi
+  character*5 sys_multi2
 end type
