@@ -1,4 +1,4 @@
-## Satellite Parameters, Generated by updsatpm  UTC+0  2023-03-03 02:07:35
+## Satellite Parameters, Generated by updsatpm  UTC+0  2023-03-24 01:21:57
 #           LAUNCHED      DECOMMISSIONED           MASS    MAX_YAW
 #PRN  SVN   YYYYDDD:SSSSS YYYYDDD:SSSSS COSPAR-ID  [KG]      [DEG] FID BLOCK-TYPE
 #------------------------------------------------------------------------------------
