@@ -96,3 +96,7 @@
  18. 2023-02-27 (v2.2)
  - pdp3.sh: consider specifying the language/region setting to "en_US.UTF-8" to avoid issues with decimal comma
  - table: BDS GEO satellites are disabled by default to enhance processing quality
+
+ 19. 2023-03-24 (v2.2)
+ - lib: improved the substitution rules for vacant multi-GNSS PCOs/PCVs and fixed related read issues
+ - spp: fixed the issue of unable to process BDS-only observations
